<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.boss.rains.ReigisterActivity">

    <TextView
        android:id="@+id/tv_reg_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/tv_reg_title"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reg_name"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_reg_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_reg_name"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reg_pwd"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:text="@string/tv_reg_pwd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_reg_pwd"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reg_rpwd"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:text="@string/tv_reg_rpwd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reg_rpwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_reg_rpwd"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="139dp">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="13dp"
            android:text="@string/bt_reg_agree"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_reg_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/bt_reg_ok"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>
