<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.boss.rains.ForgotActivity">

    <TextView
        android:id="@+id/tv_for_title"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:text="@string/tv_for_title"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_for_name"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_for_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_for_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_for_name"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_for_pwd"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_for_pwd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_for_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_for_pwd"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="126dp">

        <Button
            android:id="@+id/bt_for_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/bt_for_ok"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>
